# modelbox-webui

./: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  .stylelintignore  .stylelintrc.js  CMakeLists.txt  COPYRIGHT  ReadMe.md  angular.json  browserslist  karma.conf.js  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
.github/workflows/: gitee-mirror.yml  webpack.yml
.staging/: index.html  proxy.json  theme.json
config/: theme.config.js  webpack.config.js
mock/: all.tasks.list.data.json  createTask.data.json  delete.data.json  mock.js  search.task.status.data.json  units.json
package/: CMakeLists.txt
src/: index.html  main.ts  polyfills.ts  styles.less
src/app/: app.component.spec.ts  app.component.ts  app.module.ts
src/app/components/attribute-panel/: attribute-panel.component.html  attribute-panel.component.less  attribute-panel.component.ts  attribute-panel.spec.ts  mock-data.ts
src/app/components/first/: first.component.html  first.component.less  first.component.ts  first.spec.ts
src/app/components/graph/: dot.js  dotParser.js  dotParser.pegjs  graph.component.html  graph.component.less  graph.component.ts  graph.spec.ts
src/app/components/header/: header.component.html  header.component.less  header.component.ts
src/app/components/header-main/: header-main.component.html  header-main.component.less  header-main.component.ts  header-main.spec.ts
src/app/components/insert-panels/: insert-panels.component.html  insert-panels.component.less  insert-panels.component.ts  insert-panels.spec.ts  mock_data.ts
src/app/components/management/: management.component.html  management.component.less  management.component.ts  management.spec.ts  mock-data.ts
src/app/components/modal-guide/: modal-guide.component.html  modal-guide.component.ts  modal-guide.spec.ts
src/app/components/modal-guide-main/: modal-guide-main.component.html  modal-guide-main.component.less  modal-guide-main.component.ts  modal-guide-main.spec.ts
src/app/components/modal-save-as/: modal-save-as.component.html  modal-save-as.component.ts  modal-save-as.spec.ts
src/app/components/modal-vscode/: modal-vscode.component.html  modal-vscode.component.less  modal-vscode.component.spec.ts  modal-vscode.component.ts
src/app/components/solution/: mock-data.ts  solution.component.html  solution.component.less  solution.component.ts  solution.spec.ts
src/app/core/: core.module.ts  i18n.service.ts  index.ts  module-import-guard.ts
src/app/layout/: layout.module.ts
src/app/pages/: pages-routing.module.ts  pages-routing.spec.ts  pages.module.ts
src/app/shared/: shared.module.ts
src/environments/: environment.prod.ts  environment.ts
src/i18n/dt/: en_US.json
src/i18n/hws/: en-US.json  zh_CN.json
(+48 files in other folders)
